@@ -32,38 +32,10 @@
 //  fixed shifts and additions.
 */
 
-
-/*
- * ON A HIGHLY OPTIMIZED CRC32 HASH CALCULATION PROCESSING ALONE
- * THE SYSTEM IS PUSHING AROUND 8-12 % OF CPU TIME!
- *
- * ... but the previous top waster, the aprsc output filters, are optimized
- * to the hilt...
- *
- * There exists alternate implementations of CRC32 which are 1.7 - 2.3 times
- * faster than this one with an expense of using 4kB / 8 kB / 16 kB of tables,
- * which of course fill caches...
- *
- */
-
 #include <stdint.h>
 #include <sys/types.h>
 
 #include "keyhash.h"
-
-#ifdef __GNUC__ // compiling with GCC ?
-
-#define likely(x)      __builtin_expect(!!(x), 1)
-#define unlikely(x)    __builtin_expect(!!(x), 0)
-
-#else
-
-#define likely(x)     (x)
-#define unlikely(x)   (x)
-
-#define __attribute__(x) 
-
-#endif
 
 void keyhash_init(void) { }
 
@@ -72,10 +44,10 @@ uint32_t __attribute__((pure)) keyhash(const void const *p, int len, uint32_t ha
 	const uint8_t *u = p;
 	int i;
 #define FNV_32_PRIME     16777619U
-#define FVN_32_OFFSET  2166136261U
+#define FNV_32_OFFSET  2166136261U
 
 	if (hash == 0)
-        	hash = (uint32_t)FVN_32_OFFSET;
+        	hash = (uint32_t)FNV_32_OFFSET;
 
 	for (i = 0; i < len; ++i, ++u) {
 #if defined(NO_FNV_GCC_OPTIMIZATION)
@@ -98,7 +70,7 @@ uint32_t __attribute__((pure)) keyhashuc(const void const *p, int len, uint32_t 
 	int i;
 
 	if (hash == 0)
-        	hash = (uint32_t)FVN_32_OFFSET;
+        	hash = (uint32_t)FNV_32_OFFSET;
 
 	for (i = 0; i < len; ++i, ++u) {
 #if defined(NO_FNV_GCC_OPTIMIZATION)
